--- a/receipe-post.html
+++ b/receipe-post.html
@@ -339,12 +339,13 @@ Susu coklat tawar dingin 250 ml
                             <h6>Newsletter</h6>
 
                             <!-- Form -->
-                            <div class="newsletter-form bg-img bg-overlay" style="background-image: url(img/bg-img/bg1.jpg);">
+                            <div class="newsletter-form bg-img bg-overlay" style="background-image: url(img/bg-img/logo.jpg);">
                                 <form action="#" method="post">
                                     <input type="email" name="email" placeholder="Masukkan nama anda">
-                                    <button type="submit" class="btn delicious-btn w-100">Subscribe</button>
+                                    <p>Silahkan masukkan email anda untuk mendapat notifikasi dari kami :)</p>
                                 </form>
-                                <p>Silahkan masukkan email anda untuk mendapat notifikasi dari kami :)</p>
+                                <br/><br/><br/>
+                                <div><button type="submit" class="btn delicious-btn w-100">Submit</button>
                             </div>
                         </div>
 
