--- a/blog-post.html
+++ b/blog-post.html
@@ -101,9 +101,8 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
+                                    <li><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="blog-post.html">Pages</a>                                        <ul class="dropdown">
                                             
                                             <li><a href="blog-post.html">Blog Post</a></li>
                                             <li><a href="receipe-post.html">Receipe Post</a></li>
