--- a/blog-post2.html
+++ b/blog-post2.html
@@ -101,8 +101,8 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="blog-post.html">Pages</a>
                                         <ul class="dropdown">
                                             
                                             <li><a href="blog-post.html">Blog Post</a></li>
