--- a/contact.html
+++ b/contact.html
@@ -101,8 +101,8 @@
                             <!-- Nav Start -->
                            <div class="classynav">
                                  <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="blog-post.html">Pages</a>
                                         <ul class="dropdown">
                                             
                                             <li><a href="blog-post.html">Blog Post</a></li>
@@ -116,7 +116,7 @@
                                     
                                     <li><a href="receipe-post.html">Receipies</a></li>
                                      <li><a href="price.html">Price</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li class="active"><a href="contact.html">Contact</a></li>
                                     <li><a href="about.html">About Us</a></li>
                                 </ul>
 
