--- a/elements.html
+++ b/elements.html
@@ -102,7 +102,7 @@
                             <div class="classynav">
                                  <ul>
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="blog-post.html">Pages</a>
                                         <ul class="dropdown">
                                             
                                             <li><a href="blog-post.html">Blog Post</a></li>
