--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="classynav">
                                 <ul>
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="blog-post.html">Pages</a>
                                         <ul class="dropdown">
                                             
                                             <li><a href="blog-post.html">Blog Post</a></li>
